--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
 		"@types/react-dom": "^17.0.0",
 		"@types/react-router": "5.1.11",
 		"@types/react-router-dom": "5.1.7",
+		"@types/react-redux":"7.1.16",
 		"axios": "^0.21.1",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-router": "5.2.0",
 		"react-router-dom": "5.2.0",
-		"typescript": "^4.1.2"
+		"typescript": "^4.1.2",
+		"react-redux": "^7.2.0",
+		"redux": "^4.0.5"
 	},
 	"devDependencies": {
 		"clean-webpack-plugin": "^3.0.0",
